  * Add libjs-bootstrap to use Debian bootstrap, remove building upstreams
    version from debian/rules.
  * Add python-jsonschema as build dependency and python/python3-jsonschema to
    ipython/ipython3-notebook binary packages.
  * Add python-jinja2, python-numpy, python-requests
    to build-deps so we can run testcases
  * Add myself to uploaders

 -- Diane Trout <diane@ghic.org>  Tue, 02 Jun 2015 11:27:38 -0700

ipython (2.3.0-2) unstable; urgency=medium

  * Team upload.
  * Add pygments2.0_compatibility.patch (taken from Carlos Cordoba's pull
    request. Closes: #768705)

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 09 Nov 2014 23:33:24 +0100

ipython (2.3.0-1) unstable; urgency=medium

  * New upstream bugfix release
  * drop wx build dependency, not needed for tests anymore (Closes: #760691)
  * bump standard to 3.9.6, no changes required
  * refresh paths in debian/copyright and adapt to some removed files

 -- Julian Taylor <jtaylor.debian@googlemail.com>  Sat, 20 Sep 2014 13:54:57 +0200

ipython (2.2.0-1) unstable; urgency=medium

  * New upstream bugfix release

 -- Julian Taylor <jtaylor.debian@googlemail.com>  Sun, 17 Aug 2014 13:57:50 +0200

ipython (2.1.0-2) unstable; urgency=medium

  * debian/rules: allow building with uglifyjs 2
    Thanks to Leo Iannacone for the patch (Closes: #750715)
  * shared-static-path.patch: change marked.js search path to path used by
    ipython-notebook-common package, fixes nbconvert failures when using
    nodejs instead of pandoc
  * debian/control: add nodejs to suggests
    it is an alternative to pandoc for nbconvert to html (Closes: #751008)

 -- Julian Taylor <jtaylor.debian@googlemail.com>  Tue, 15 Jul 2014 22:33:25 +0200

ipython (2.1.0-1) unstable; urgency=low

  * New upstream release
    - removes irunner, iplogger and pycolor binaries
  * drop obsolete patches:
    - 05_fix_seteditor_example.patch
    - parallel-2to3.patch
    - test-default-tk.patch