@@ -2,3 +2,4 @@ usr/share/javascript/marked/marked.min.js usr/share/ipython/notebook/static/comp
 usr/share/javascript/highlight/highlight.js usr/share/ipython/notebook/static/components/highlight.js/build/highlight.pack.js
 usr/share/javascript/underscore/underscore.min.js usr/share/ipython/notebook/static/components/underscore/underscore-min.js
 usr/share/javascript/bootstrap/ usr/share/ipython/notebook/static/components/
+usr/share/javascript/jquery-ui/ usr/share/ipython/notebook/static/components/jquery-ui
